[package]
name = "rust-toggl-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
